--- a/TeamBuddy.App/Views/HomeUserDetailView.xaml
+++ b/TeamBuddy.App/Views/HomeUserDetailView.xaml
@@ -11,7 +11,7 @@
              d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="5*"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="10"/>
