--- a/TeamBuddy.App/Views/MainWindow.xaml
+++ b/TeamBuddy.App/Views/MainWindow.xaml
@@ -6,10 +6,14 @@
         xmlns:local="clr-namespace:TeamBuddy.App"
         xmlns:views="clr-namespace:TeamBuddy.App.Views"
         mc:Ignorable="d"
-        Title="Team Buddy" Icon="Images/TeamBuddyIcon.ico" Height="720" Width="1024" WindowStartupLocation="CenterScreen" MinWidth="1000" MinHeight="600">
+        Title="Team Buddy" Icon="Images/TeamBuddyIcon.ico" Height="720" Width="1024" WindowStartupLocation="CenterScreen" MinWidth="1024" MinHeight="720">
     <Grid>
         <views:TeamSelectedView />
         <views:HomeView />
         <views:LogInView />
+
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/TeamBuddyBG.png" Stretch="UniformToFill"/>
+        </Grid.Background>
     </Grid>
 </Window>
