--- a/TeamBuddy.App/Views/SelectedTeamDetailView.xaml
+++ b/TeamBuddy.App/Views/SelectedTeamDetailView.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TeamBuddy.App.Views"
+             xmlns:views="clr-namespace:TeamBuddy.App.Views"
              xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
+             xmlns:viewModels="clr-namespace:TeamBuddy.App.ViewModels"
              mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance viewModels:SelectedTeamDetailViewModel}"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamDetailViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -19,38 +23,19 @@
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="1" Text="Team Name" HorizontalAlignment="Center" Margin="0 0 0 0" FontSize="35" FontFamily="Ink Free" FontWeight="Bold"/>
-            <TextBlock Grid.Row="2" Text="Description of the selected Team" HorizontalAlignment="Center" Margin="0 0 0 0" FontSize="25" FontFamily="Ink Free"/>
+            <TextBlock Grid.Row="1" Text="{Binding SelectedTeam.Name}" HorizontalAlignment="Center" Margin="0 0 0 0" FontSize="35" FontFamily="Ink Free" FontWeight="Bold"/>
+            <TextBlock Grid.Row="2" Text="{Binding SelectedTeam.Description}" HorizontalAlignment="Center" Margin="0 0 0 0" FontSize="25" FontFamily="Ink Free"/>
         </Grid>
-
-        <!--Grid Grid.Row="1" Margin="20 20 20 20" Background="Transparent">
-            <TabControl Background="Transparent">
-                <TabControl.Resources>
-                    <Style TargetType="{x:Type TabPanel}">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                    </Style>
-                </TabControl.Resources>
-                <TabItem Header="Posts" Width="300" Height="50" Opacity="0.4" FontSize="15"/>
-                <TabItem Header="Users" Width="300" Opacity="0.4" FontSize="15"/>
-            </TabControl>
-        </-->
 
         <Grid Grid.Row="1" Margin="30 0 30 30" Opacity="1">
             <dragablz:TabablzControl FixedHeaderCount="3" FontSize="16" Padding="2,2,0,2" Background="Transparent">
-                
-                <TabItem Header="Posts" VerticalAlignment="Center" HorizontalContentAlignment="Stretch"/>
-                <TabItem Header="Users">
-                    <Grid>
-                        <ListBox>
-                            <TextBlock Text="Alex je kokot"/>
-                            <TextBlock Text="Dano je este vacsi"/>
-                            <TextBlock Text="Ja som boss"/>
-                        </ListBox>
-                    </Grid>
+                <TabItem Header="Posts" VerticalAlignment="Center" HorizontalContentAlignment="Stretch">
+                    <views:SelectedTeamPostListView />
                 </TabItem>
-                
+                <TabItem Header="Users">
+                    <views:SelectedTeamUserListView />
+                </TabItem>
             </dragablz:TabablzControl>
         </Grid>
-
-</Grid>
+    </Grid>
 </UserControl>
