--- a/TeamBuddy.App/Views/SelectedTeamUserDetailView.xaml
+++ b/TeamBuddy.App/Views/SelectedTeamUserDetailView.xaml
@@ -1,12 +1,40 @@
-﻿<UserControl x:Class="TeamBuddy.App.Views.Images.SelectedTeamUserDetailView"
+﻿<UserControl x:Class="TeamBuddy.App.Views.SelectedTeamUserDetailView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TeamBuddy.App.Views.Images"
+             xmlns:local="clr-namespace:TeamBuddy.App.Views"
+             xmlns:viewModels="clr-namespace:TeamBuddy.App.ViewModels"
              mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance viewModels:SelectedTeamUserDetailViewModel}"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamUserDetailViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid Grid.Row="1" Margin="0 20 0 20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0" Text="Username:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>
+            <TextBlock Grid.Row="1" Text="{Binding SelectedUser.Username}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
+            <TextBlock Grid.Row="2" Text="Name:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6"  ></TextBlock>
+            <TextBlock Grid.Row="3" Text="{Binding SelectedUser.Name}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
+            <TextBlock Grid.Row="4" Text="Email:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>
+            <TextBlock Grid.Row="5" Text="{Binding SelectedUser.Email}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
+            <TextBlock Grid.Row="6" Text="Gender:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6"  ></TextBlock>
+            <TextBlock Grid.Row="7" Text="{Binding SelectedUser.Gender}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
+            <!--<TextBlock Grid.Row="8" Text="Status:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6"  ></TextBlock>-->
+            <!--<TextBlock Grid.Row="9" Text="Status" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>-->
+
+        </Grid>
     </Grid>
 </UserControl>
