--- a/TeamBuddy.App/Views/HomeCreateTeamView.xaml
+++ b/TeamBuddy.App/Views/HomeCreateTeamView.xaml
@@ -8,15 +8,14 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance viewModels:HomeCreateTeamViewModel}"
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeCreateTeamViewModel}"
-             d:DesignHeight="200" d:DesignWidth="800">
-    <Grid Width="450" Margin="0 0 30 0" Visibility="{Binding NewTeam, Converter={StaticResource NullToVisibilityConverter}}">
+             d:DesignHeight="220" d:DesignWidth="800">
+    <Grid Width="450" Height="205" Margin="0 30 30 0" Visibility="{Binding NewTeam, Converter={StaticResource NullToVisibilityConverter}}">
         <Grid.RowDefinitions>
 
             <RowDefinition Height="45"/>
             <RowDefinition Height="45"/>
             <RowDefinition Height="45"/>
             <RowDefinition Height="45"/>
-            <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             
