--- a/TeamBuddy.App/Views/SelectedTeamPostListView.xaml
+++ b/TeamBuddy.App/Views/SelectedTeamPostListView.xaml
@@ -10,15 +10,22 @@
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ListBox x:Name="PostsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Posts}" Margin="0" Panel.ZIndex="-1">
+        <ListBox ScrollViewer.CanContentScroll="False" x:Name="PostsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Posts}" Margin="0" Panel.ZIndex="-1">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <Label Content="{Binding Title}" FontSize="30" Opacity="0.8" />
-                        <TextBlock Text="{Binding Text}" FontSize="30" Opacity="0.8" />
-                        <TextBlock Text="{Binding PostAdditionTime}" FontSize="30" Opacity="0.8" />
-                        <TextBlock Text="xmjaso00" FontSize="30" Opacity="0.8" />
-                        <Grid>
+                        <Label Content="{Binding Title}" FontSize="30" FontWeight="Bold" Opacity="1" FontFamily="Bell MT"  />
+                        <TextBlock Text="{Binding Text}" TextWrapping="Wrap" FontSize="20" Opacity="0.8" FontFamily="Arial"/>
+                        <Grid Margin="0 10 0 0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Text="{Binding PostAdditionTime}" FontSize="12" Opacity="0.8" />
+                            <TextBlock Grid.Row="1"  Text="xmjaso00" FontSize="12" Opacity="0.8"  />
+                        </Grid>
+
+                        <Grid Margin="0 10 0 0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
@@ -28,14 +35,20 @@
                             <Button Content="Add Comment" Grid.Column="1"/>
                             <Button Content="Delete Post" Grid.Column="2"/>
                         </Grid>
-                        <ListBox x:Name="CommentsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel.Comments}" Margin="0" >
+                        <ListBox ScrollViewer.CanContentScroll="False" x:Name="CommentsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel.Comments}" Margin="50 0 0 0" >
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel>
-                                        <TextBlock Text="{Binding Text}" FontSize="30" Opacity="0.8" />
-                                        <TextBlock Text="{Binding CommentAdditionTime}" FontSize="30" Opacity="0.8" />
-                                        <TextBlock Text="xmjaso00" FontSize="30" Opacity="0.8" />
-                                        <Grid>
+                                        <TextBlock Text="{Binding Text}" TextWrapping="Wrap" FontSize="20" Opacity="0.8" FontFamily="Arial"/>
+                                        <Grid Margin="0 10 0 0">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Grid.Row="0" Text="{Binding CommentAdditionTime}" FontSize="12" Opacity="0.8"/>
+                                            <TextBlock Grid.Row="1" Text="xmjaso00" FontSize="12" Opacity="0.8"/>
+                                        </Grid>
+                                        <Grid Margin="0 10 0 0">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition/>
                                                 <ColumnDefinition/>
